<resources>
    <string name="app_name">Szlukiék elemózsiakészlete</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_date_picker">DatePicker</string>
    <string name="title_activity_lekerdezes">A készlet</string>
    <string name="title_activity_lekerdezes_uj">LekerdezesUjActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="termekLabel">"        Termék : "</string>
    <string name="helyeLabel">"        Helye : "</string>
    <string name="darabLabel">"        Mennyiség : "</string>
    <string name="minMennyisegLabel">"        Min. mennyiség : "</string>
    <string name="szavatossagLabel">"        Szavatosság : "</string>
    <string name="ertekelesLabel">"        Értékelés : "</string>
    <string name="barcodeLabel">"        Barcode: "</string>
    <string name="space">"     "</string>
    <string name="spinner_title">Mit listazzak?</string>

    <string-array name="spinnerQuery">
        <item>Mind</item>
        <item>Le fog jarni</item>
        <item>Keves</item>
    </string-array>
    <string name="title_activity_lekerdezes_new">LekerdezesNew</string>
</resources>
